后台实现文章增删改查

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -13,6 +13,8 @@
 @import '~@fortawesome/fontawesome-free/scss/regular';
 @import '~@fortawesome/fontawesome-free/scss/solid';
 @import "~@fortawesome/fontawesome-free/scss/fontawesome";
+//clean Blog
+@import "~startbootstrap-clean-blog/scss/clean-blog";
 
 .navbar-laravel {
   background-color: #fff;
